--- a/frontend/tele-schocken/package.json
+++ b/frontend/tele-schocken/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.12.30",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
