--- a/frontend/tele-schocken/package.json
+++ b/frontend/tele-schocken/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.30",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
+    "@types/react-swipeable-views": "^0.13.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "node-sass": "^4.13.1",
@@ -19,6 +20,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.5"
   },
