--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,20 @@
 alembic==1.4.2
 click==7.1.1
+config==0.4.2
+dominate==2.5.1
 Flask==1.1.1
+Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Mako==1.1.2
 MarkupSafe==1.1.1
+PyMySQL==0.9.3
 python-dateutil==2.8.1
+python-dotenv==0.12.0
 python-editor==1.0.4
 six==1.14.0
 SQLAlchemy==1.3.15
+visitor==0.1.3
 Werkzeug==1.0.0
