--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,42 @@
+alabaster==0.7.12
 alembic==1.4.2
+Babel==2.8.0
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.1
 config==0.4.2
+docutils==0.16
 dominate==2.5.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
+idna==2.9
+imagesize==1.2.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Mako==1.1.2
 MarkupSafe==1.1.1
+packaging==20.3
+Pygments==2.6.1
 PyMySQL==0.9.3
+pyparsing==2.4.6
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 python-editor==1.0.4
+pytz==2019.3
+requests==2.23.0
 six==1.14.0
+snowballstemmer==2.0.0
+Sphinx==2.4.4
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.15
+urllib3==1.25.8
 visitor==0.1.3
 Werkzeug==1.0.0
