--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 idna==2.9
 imagesize==1.2.0
 itsdangerous==1.1.0
@@ -33,6 +34,7 @@ sphinx-rtd-theme==0.4.3
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-httpdomain==1.7.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
@@ -40,3 +42,4 @@ SQLAlchemy==1.3.15
 urllib3==1.25.8
 visitor==0.1.3
 Werkzeug==1.0.0
+WTForms==2.2.1
