--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 alabaster==0.7.12
 alembic==1.4.2
+APScheduler==3.6.3
 Babel==2.8.0
 certifi==2019.11.28
 chardet==3.0.4
@@ -39,6 +40,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.3.15
+tzlocal==2.0.0
 urllib3==1.25.8
 visitor==0.1.3
 Werkzeug==1.0.0
