--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ alabaster==0.7.12
 alembic==1.4.2
 APScheduler==3.6.3
 Babel==2.8.0
+bidict==0.21.2
+blinker==1.4
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
@@ -10,9 +12,14 @@ docutils==0.16
 dominate==2.5.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
+Flask-SocketIO==5.0.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+gevent==20.12.1
+greenlet==0.4.17
+gunicorn==20.0.4
 idna==2.9
 imagesize==1.2.0
 itsdangerous==1.1.0
@@ -26,6 +33,8 @@ pyparsing==2.4.6
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 python-editor==1.0.4
+python-engineio==4.0.0
+python-socketio==5.0.4
 pytz==2019.3
 requests==2.23.0
 six==1.14.0
@@ -45,3 +54,5 @@ urllib3==1.25.8
 visitor==0.1.3
 Werkzeug==1.0.0
 WTForms==2.2.1
+zope.event==4.5.0
+zope.interface==5.2.0
